[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/accept.ogg" type="AudioStream" id=5]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/bgm.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/enemy explosion.ogg" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 640, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 320 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 320 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 320, 40 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
Enemy = ExtResource( 2 )
Powerup = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.0980392, 0.0588235, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 320 )
current_miss_method = "_on_Bullet_miss"

[node name="SpawnerPath" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawner" type="PathFollow2D" parent="SpawnerPath"]

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2( -40, 320 )
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2( 680, 320 )
shape = SubResource( 3 )

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, -40 )
shape = SubResource( 4 )

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, 680 )
shape = SubResource( 5 )

[node name="Focus" type="Position2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera2D" parent="Focus"]
position = Vector2( 320, 320 )
current = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="AcceptSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -18.0
autoplay = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -9.0

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
